trying to change layout display to flex

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,18 +3,24 @@ $primary-color: #ffd700;
 @import 'animate.css';
 
 @font-face {
-  font-family: 'Helvetica Neue';
-  src: url('./assets/fonts/helvetica-neu.ttf') format('ttf');
+  font-family: Helvetica-Neue;
+  src: url('./assets/fonts/helvetica-neu.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-  font-family: 'La Belle Aurore';
-  src: url('./assets/fonts/laBelleAurore.ttf') format('ttf');
+  font-family: La-Belle-Aurore;
+  src: url('./assets/fonts/laBelleAurore.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
   font-family: 'Coolvetica';
-  src: url('./assets/fonts/coolvetica.otf') format('otf');
+  src: url('./assets/fonts/coolvetica.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
 }
 
 input,
