--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -1,6 +1,6 @@
 .nav-bar{
     background: #181818;
-    width: 300px;
+    width: 200px;
     height: 100%;
     position: absolute;
     top: 0;
@@ -12,8 +12,8 @@
         text-decoration: none;
         color: #d0bfbf;
         .logos{
-            width: 90%;
-            border-radius: 30px;
+            width: 80%;
+            border-radius: 50%;
             border: solid 8px #022c43;;
         }
         .sub-logo{
@@ -53,16 +53,16 @@
                 svg{
                     opacity: 0;
                 }
-                &.after{
+                &:after{
                     opacity: 1;
                 }
             }
             &:after{
                 content: '';
-                font-size: 9px;
+                font-size: 12px;
                 letter-spacing: 2px;
                 position: absolute;
-                bottom: 0;
+                bottom: 50%;
                 display: block;
                 width: 100%;
                 text-align: center;
@@ -78,6 +78,34 @@
         a.about-link{
             &:after{
                 content: 'ABOUT';
+            }
+        }
+        a.contact-link{
+            &:after{
+                content: 'ABOUT';
+            }
+        }
+        a.active {
+            svg{
+                color: #ffd700;
+            }
+        }
+    }
+    ul{
+        width: 100%;
+        display: flex;
+        padding: 0;
+        list-style: none;
+        margin: 0;
+        align-items: center;
+        justify-content:space-evenly;
+        li{
+            a{
+                font-size: 16px;
+                line-height: 16px;
+                &:hover svg{
+                    color: #ffd700;
+                }
             }
         }
     }
